:recycle: Country quiz title Alignment fixed

--- a/src/styles/flagAlignment.css
+++ b/src/styles/flagAlignment.css
@@ -7,5 +7,5 @@
 }
 
 .countryQuizAlignment {
-  transform: translateX(-50%);
+  transform: translateX(-35%);
 }
